fixed overlapping container issue

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -53,6 +53,9 @@
 
 .quiz-content {
     float: left;
+    display: block;
+    clear:both;
+    text-align: left;
     padding: 1rem;
 }
 
@@ -74,7 +77,6 @@
     padding: 1rem;
     border: 5px solid skyblue;
     border-radius: 50px;
-    display: inline-block;;
 }
 
 .quiz-header {
